# fwtop

./: LICENSE  Makefile  README.md  fwtop.spec  pyproject.toml
.github/workflows/: build.yml
src/fwtop/: __init__.py  __main__.py  app.py  collector.py  config.py  dns_servers.py  fwtop.tcss  models.py  resolve.py  stats.py
src/fwtop/sources/: __init__.py  conntrack.py  demo.py  firewall.py  interfaces.py
src/fwtop/widgets/: __init__.py  connections_table.py  conntrack_panel.py  cpu_panel.py  drops_heatmap.py  firewall_panel.py  interface_table.py  summary_panel.py  throughput_chart.py
